Change title to 'TO DO LIST'

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Task Management Dashboard • Standout</title>
+    <title>TO DO LIST </title>
 
     <!-- Tailwind config for class-based dark mode -->
     <script>
